--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>JS Crash Course</title> 
     </head>
     <body>
@@ -11,6 +12,9 @@
             <h1>JS Crash Course</h1>
         </header>
     </body>
-    <script src="main.js"></script>
+    <!-- <script src="mdn.js" defer></script> -->
+    <script src="main.js" defer></script>
+    <p>Player 1: Chris</p>
+
 
 </html>
